# audio-agg-priv

./: Cargo.toml  nohup.out  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: install_build_dependencies.sh  install_check_dependencies.sh  run_build.sh  run_check.sh  run_formatter.sh
scripts/linkers/: aarch64-unknown-linux-gnu.sh  x86_64-unknown-linux-gnu.sh
src/: lib.rs  main.rs  packet.rs  packet_data.rs  packet_sync.rs  payload_sink.rs  rate.rs  recv_stats.rs  send_stats.rs  status_icon_mac.rs  sync.rs  sync_controller.rs  timesync.rs  volume.rs
