[package]
name = "sound-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = { version = "0.15", optional = true }
bytemuck = { version = "1", features = ["extern_crate_std"] }

[target.'cfg(target_os = "macos")'.dependencies]
system_status_bar_macos = "0.1.3"

[features]
default = []
use_cpal = ["cpal"]
