[package]
name = "sound-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cpal = { version = "0.15", optional = true }
bytemuck = { version = "1", features = ["extern_crate_std"] }
thread-priority = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
system_status_bar_macos = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Variant",
] }

[features]
default = []
use_cpal = ["cpal"]
